Proofread content throughout website

--- a/Maximalist.html
+++ b/Maximalist.html
@@ -123,8 +123,11 @@
 
       <p class="palette-title">
         This is the colour scheme for the people who like to be bold with their
-        homes. It's about putting bold colours up against each other, even
-        clashing.
+        homes. More is more is more! It's about putting bold colours up against
+        each other, even clashing. It is a great palette for those that want to
+        create something unforgettable in their home and bring in that WOW
+        factor. This is a joyful scheme, it's about being brave and taking
+        risks.
       </p>
     </div>
     <!-- Bootstrap base code  -->
@@ -152,9 +155,19 @@
 
       <ul class="palette-list">
         <li>
-          This is a joyful scheme, it's about being brave and taking risks.
+          This is the ultimate palette for self-expression. There are no hard
+          rules, it's about trial and error and following your instincts.
         </li>
-        <li>Play around with colours that you love.</li>
+        <li>
+          As this is about mixing multiple colours together, build your palette
+          up slowly so you can make sure you're creating something you really
+          love and that makes sense together.
+        </li>
+        <li>
+          A piece of colourful art can be a great starting point for a scheme
+          like this. Put the different colours from the artwork into the room
+          and then hang it on the wall to pull the scheme together.
+        </li>
       </ul>
     </div>
 
@@ -183,15 +196,16 @@
               ></use>
             </svg>
           </a>
-          <a 
-          class="copyright"
-          href="https://designled.io/"
-          target="_blank"
-          rel="noopener noreferral"
-          aria-label="DesignLed website"
+          <a
+            class="copyright"
+            href="https://designled.io/"
+            target="_blank"
+            rel="noopener noreferral"
+            aria-label="DesignLed website"
           >
-          <span class="mb-3 mb-md-0 text-body-secondary"
-            >© 2023 DesignLed Ltd</span>
+            <span class="mb-3 mb-md-0 text-body-secondary"
+              >© 2023 DesignLed Ltd</span
+            >
           </a>
         </div>
 
