--- a/Monochromatic.html
+++ b/Monochromatic.html
@@ -122,9 +122,10 @@
       <h2 class="palette-title">Monochromatic Colour Palette</h2>
 
       <p class="palette-title">
-        A monochromatic scheme creates a calming feel whilst also delivering
-        impact. It is a great option for a bedroom where you want to create a
-        feeling of relaxation. The mixture of strong but similarly toned colours
+        A monochromatic scheme is created by choosing the initial base colour
+        and then adding various shades and tones of that same colour as you
+        build up the room's palette. It creates a calming feel whilst also
+        delivering impact. The mixture of strong but similarly toned colours
         means there is nothing jarring to the eye, every part of the room flows
         very naturally into the next.
       </p>
@@ -154,12 +155,17 @@
 
       <ul class="palette-list">
         <li>
-          Start with your feature colour, this will be the jumping off point for
-          the rest of the scheme. It should be the colour that features the
-          most, for example the walls.
+          Choose a colour you love! You're going to be using a lot of it in the
+          room.
         </li>
         <li>
-          Then it is about bringing in shades and variations on this one colour.
+          Make sure to get samples of all the different elements you are going
+          to be bringing into the room. With this scheme, the exact shade is so
+          important.
+        </li>
+        <li>
+          Be brave and choose a strong colour! This kind of palette really
+          creates impact when the colours used are daring.
         </li>
       </ul>
     </div>
@@ -189,15 +195,16 @@
               ></use>
             </svg>
           </a>
-          <a 
-          class="copyright"
-          href="https://designled.io/"
-          target="_blank"
-          rel="noopener noreferral"
-          aria-label="DesignLed website"
+          <a
+            class="copyright"
+            href="https://designled.io/"
+            target="_blank"
+            rel="noopener noreferral"
+            aria-label="DesignLed website"
           >
-          <span class="mb-3 mb-md-0 text-body-secondary"
-            >© 2023 DesignLed Ltd</span>
+            <span class="mb-3 mb-md-0 text-body-secondary"
+              >© 2023 DesignLed Ltd</span
+            >
           </a>
         </div>
 
