--- a/Neutral.html
+++ b/Neutral.html
@@ -122,10 +122,13 @@
       <h2 class="palette-title">Neutral Colour Palette</h2>
 
       <p class="palette-title">
-        For those of you that prefer a more pared back look, that doesn't mean
-        your spaces need to be dull. There are more than 150,000 shades of white
-        paint in the world that you can choose from. You need to take just as
-        much care choosing your neutrals as you do your bolder colours.
+        This is the scheme for those of you that prefer a more pared back look.
+        But you need to take just as much care choosing your neutrals as you do
+        your bolder colours. There are more than 150,000 shades of white paint
+        in the world to choose from. Choose a white with too much blue or grey
+        and you could end up with a colder feeling room than you wanted. Choose
+        a white with too much cream and you risk it yellowing and turning into
+        the dreaded magnolia over time.
       </p>
     </div>
 
@@ -191,15 +194,16 @@
               ></use>
             </svg>
           </a>
-          <a 
-          class="copyright"
-          href="https://designled.io/"
-          target="_blank"
-          rel="noopener noreferral"
-          aria-label="DesignLed website"
+          <a
+            class="copyright"
+            href="https://designled.io/"
+            target="_blank"
+            rel="noopener noreferral"
+            aria-label="DesignLed website"
           >
-          <span class="mb-3 mb-md-0 text-body-secondary"
-            >© 2023 DesignLed Ltd</span>
+            <span class="mb-3 mb-md-0 text-body-secondary"
+              >© 2023 DesignLed Ltd</span
+            >
           </a>
         </div>
 
