--- a/colour-theory.html
+++ b/colour-theory.html
@@ -131,10 +131,10 @@
         your home, you can start to use it intentionally to allow you to
         influence how you feel in different parts of your home. <br /><br />
         Have you ever walked into a sunny cafe with bright yellow walls and
-        instantly felt livelier? Or entered the calm, of a spa decorated in
+        instantly felt livelier? Or entered the calm of a spa decorated in
         soft, natural tones and felt an unmistakeable feeling of zen? The colour
         combinations and paint ideas used in your home can affect your mood in
-        exactly the same way. It's important to rememnber though that whilst
+        exactly the same way. It's important to remember though that whilst
         there is something of a science behind colours, at the end of the day,
         how you react to them is subjective. One person's idea of heaven with a
         black room is another person's idea of hell. So it's important to find
@@ -169,7 +169,7 @@
             understanding why. It is a colour that brings a smile to people's
             face when they walk into a yellow room. It comes in so many shades
             that from buttercup to mustard, there's a shade to suit every style
-            of home from modern apartment to period house.
+            of home from a modern apartment to a period house.
           </p>
         </div>
       </div>
@@ -184,11 +184,9 @@
         </div>
         <div class="description col-xs-12 col-sm-6">
           <p>
-            Whilst orange isn't a millions miles away from yellow, it's a less
-            popular colour but one that has no less positive connotations. It is
-            an undeniable confident and positive colour that shows a bold
-            personality. Remember that this colour has so many different
-            permutations, it doesn't have to the bright, traffic light orange.
+            Orange is an undeniably confident and positive colour that shows a
+            bold personality. Remember that this colour has so many different
+            permutations, it doesn't have to be the bright, traffic light orange.
             If you like this colour but are a bit wary, look at something with
             touches of peach or leaning more towards pastel shades. If you love
             that really bold orange, remember colour doesn't just go on walls.
@@ -230,15 +228,13 @@
 
         <div class="description col-xs-12 col-sm-6">
           <p>
-            Pink is no longer the domain of little girl's bedrooms. With its
-            resurgence in popularity in recent years, all the major paint brands
-            continue to bring out very interesting shades of this once
-            controversial colour. It's at once inviting, fun and grown up. The
-            softer, earthier shades are fantastic to use in a bedrooom as its'
-            softness lends itself to create a soothing feel. However, the
-            stronger tones can work fantastically as show-stopping accent
-            pieces. A staircase painted in a dark, moody pink in an otherwise
-            neutral hallway would make a fantastic statement.
+            Pink is no longer the domain of little girl's bedrooms. It's at once
+            inviting, fun and grown up - if the right hue is used. The softer,
+            earthier shades are fantastic to use in a bedrooom as its' softness
+            lends itself to create a soothing feel. However, the stronger tones
+            can work fantastically for show-stopping accent pieces. A staircase
+            painted in a dark, moody pink in an otherwise neutral hallway makes
+            a fantastic statement.
           </p>
         </div>
       </div>
@@ -307,82 +303,83 @@
       </div>
     </div>
 
-   <!-- Footer Section -->
+    <!-- Footer Section -->
 
-   <div class="container-fluid">
-    <img
-      src="assets/site-images/Line.webp"
-      alt="rainbow line"
-      style="width: 100%; height: 2px"
-    />
+    <div class="container-fluid">
+      <img
+        src="assets/site-images/Line.webp"
+        alt="rainbow line"
+        style="width: 100%; height: 2px"
+      />
 
-    <!-- Footer base code from Bootstrap -->
-    <footer
-      class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
-    >
-      <div class="col-md-4 d-flex align-items-center">
-        <a
-          href="/"
-          class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1"
-        >
-          <svg class="bi" width="30" height="24">
-            <use
-              xlink:href="#bootstrap"
-              aria-label="DesignLed copyright"
-            ></use>
-          </svg>
-        </a>
-        <a 
-        class="copyright"
-        href="https://designled.io/"
-        target="_blank"
-        rel="noopener noreferral"
-        aria-label="DesignLed website"
-        >
-        <span class="mb-3 mb-md-0 text-body-secondary"
-          >© 2023 DesignLed Ltd</span>
-        </a>
-      </div>
+      <!-- Footer base code from Bootstrap -->
+      <footer
+        class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
+      >
+        <div class="col-md-4 d-flex align-items-center">
+          <a
+            href="/"
+            class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1"
+          >
+            <svg class="bi" width="30" height="24">
+              <use
+                xlink:href="#bootstrap"
+                aria-label="DesignLed copyright"
+              ></use>
+            </svg>
+          </a>
+          <a
+            class="copyright"
+            href="https://designled.io/"
+            target="_blank"
+            rel="noopener noreferral"
+            aria-label="DesignLed website"
+          >
+            <span class="mb-3 mb-md-0 text-body-secondary"
+              >© 2023 DesignLed Ltd</span
+            >
+          </a>
+        </div>
 
-      <div class="nav col-md-2 justify-content-between">
-        <a
-          href="https://www.pinterest.ie/designledstudio"
-          target="_blank"
-          rel="noopener noreferral"
-          aria-label="Pinterest"
-          ><i
-            class="social-icons fa-brands fa-pinterest fa-2x"
-            aria-hidden="true"
-          ></i
-        ></a>
-        <a
-          href="https://www.facebook.com/designled"
-          target="_blank"
-          rel="noopener noreferral"
-          aria-label="Facebook"
-          ><i
-            class="social-icons fa-brands fa-facebook-f fa-2x"
-            aria-hidden="true"
-          ></i
-        ></a>
-        <a
-          href="https://www.instagram.com/designledstudio/"
-          target="_blank"
-          rel="noopener noreferral"
-          aria-label="Instagram"
-          ><i
-            class="social-icons fa-brands fa-instagram fa-2x"
-            aria-hidden="true"
-          ></i
-        ></a>
-        <a href="mailto:hello@designled.io" aria-label="email"
-          ><i
-            class="social-icons fa-solid fa-envelope fa-2x"
-            aria-hidden="true"
-          ></i
-        ></a>
-      </div>
-    </footer>
-  </div>
-</body>
+        <div class="nav col-md-2 justify-content-between">
+          <a
+            href="https://www.pinterest.ie/designledstudio"
+            target="_blank"
+            rel="noopener noreferral"
+            aria-label="Pinterest"
+            ><i
+              class="social-icons fa-brands fa-pinterest fa-2x"
+              aria-hidden="true"
+            ></i
+          ></a>
+          <a
+            href="https://www.facebook.com/designled"
+            target="_blank"
+            rel="noopener noreferral"
+            aria-label="Facebook"
+            ><i
+              class="social-icons fa-brands fa-facebook-f fa-2x"
+              aria-hidden="true"
+            ></i
+          ></a>
+          <a
+            href="https://www.instagram.com/designledstudio/"
+            target="_blank"
+            rel="noopener noreferral"
+            aria-label="Instagram"
+            ><i
+              class="social-icons fa-brands fa-instagram fa-2x"
+              aria-hidden="true"
+            ></i
+          ></a>
+          <a href="mailto:hello@designled.io" aria-label="email"
+            ><i
+              class="social-icons fa-solid fa-envelope fa-2x"
+              aria-hidden="true"
+            ></i
+          ></a>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
