Update text label to increase accessibility on copyright line in footer after Lighthouse test

--- a/404.html
+++ b/404.html
@@ -154,7 +154,7 @@
           </svg>
         </a>
         <a 
-        class="copyright"
+        class="DesignLed-copyright"
         href="https://designled.io/"
         target="_blank"
         rel="noopener noreferral"
