--- a/Maximalist.html
+++ b/Maximalist.html
@@ -196,16 +196,15 @@
               ></use>
             </svg>
           </a>
-          <a
-            class="copyright"
-            href="https://designled.io/"
-            target="_blank"
-            rel="noopener noreferral"
-            aria-label="DesignLed website"
+          <a 
+          class="DesignLed-copyright"
+          href="https://designled.io/"
+          target="_blank"
+          rel="noopener noreferral"
+          aria-label="DesignLed website"
           >
-            <span class="mb-3 mb-md-0 text-body-secondary"
-              >© 2023 DesignLed Ltd</span
-            >
+          <span class="mb-3 mb-md-0 text-body-secondary"
+            >© 2023 DesignLed Ltd</span>
           </a>
         </div>
 
