--- a/Neutral.html
+++ b/Neutral.html
@@ -178,6 +178,7 @@
         alt="rainbow line"
         style="width: 100%; height: 2px"
       />
+
       <!-- Footer base code from Bootstrap -->
       <footer
         class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
@@ -194,16 +195,15 @@
               ></use>
             </svg>
           </a>
-          <a
-            class="copyright"
-            href="https://designled.io/"
-            target="_blank"
-            rel="noopener noreferral"
-            aria-label="DesignLed website"
+          <a 
+          class="DesignLed-copyright"
+          href="https://designled.io/"
+          target="_blank"
+          rel="noopener noreferral"
+          aria-label="DesignLed website"
           >
-            <span class="mb-3 mb-md-0 text-body-secondary"
-              >© 2023 DesignLed Ltd</span
-            >
+          <span class="mb-3 mb-md-0 text-body-secondary"
+            >© 2023 DesignLed Ltd</span>
           </a>
         </div>
 
