--- a/Contact-form-submit.html
+++ b/Contact-form-submit.html
@@ -159,7 +159,7 @@
           </svg>
         </a>
         <a 
-        class="copyright"
+        class="DesignLed-copyright"
         href="https://designled.io/"
         target="_blank"
         rel="noopener noreferral"
