--- a/Monochromatic.html
+++ b/Monochromatic.html
@@ -195,16 +195,95 @@
               ></use>
             </svg>
           </a>
+          <a 
+          class="DesignLed-copyright"
+          href="https://designled.io/"
+          target="_blank"
+          rel="noopener noreferral"
+          aria-label="DesignLed website"
+          >
+          <span class="mb-3 mb-md-0 text-body-secondary"
+            >© 2023 DesignLed Ltd</span>
+          </a>
+        </div>
+
+        <div class="nav col-md-2 justify-content-between">
           <a
-            class="copyright"
-            href="https://designled.io/"
+            href="https://www.pinterest.ie/designledstudio"
             target="_blank"
             rel="noopener noreferral"
-            aria-label="DesignLed website"
+            aria-label="Pinterest"
+            ><i
+              class="social-icons fa-brands fa-pinterest fa-2x"
+              aria-hidden="true"
+            ></i
+          ></a>
+          <a
+            href="https://www.facebook.com/designled"
+            target="_blank"
+            rel="noopener noreferral"
+            aria-label="Facebook"
+            ><i
+              class="social-icons fa-brands fa-facebook-f fa-2x"
+              aria-hidden="true"
+            ></i
+          ></a>
+          <a
+            href="https://www.instagram.com/designledstudio/"
+            target="_blank"
+            rel="noopener noreferral"
+            aria-label="Instagram"
+            ><i
+              class="social-icons fa-brands fa-instagram fa-2x"
+              aria-hidden="true"
+            ></i
+          ></a>
+          <a href="mailto:hello@designled.io" aria-label="email"
+            ><i
+              class="social-icons fa-solid fa-envelope fa-2x"
+              aria-hidden="true"
+            ></i
+          ></a>
+        </div>
+      </footer>
+    </div>
+  </body>
+</html>
+
+<!-- Footer Section -->
+
+    <div class="container-fluid">
+      <img
+        src="assets/site-images/Line.webp"
+        alt="rainbow line"
+        style="width: 100%; height: 2px"
+      />
+
+      <!-- Footer base code from Bootstrap -->
+      <footer
+        class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
+      >
+        <div class="col-md-4 d-flex align-items-center">
+          <a
+            href="/"
+            class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1"
           >
-            <span class="mb-3 mb-md-0 text-body-secondary"
-              >© 2023 DesignLed Ltd</span
-            >
+            <svg class="bi" width="30" height="24">
+              <use
+                xlink:href="#bootstrap"
+                aria-label="DesignLed copyright"
+              ></use>
+            </svg>
+          </a>
+          <a 
+          class="DesignLed-copyright"
+          href="https://designled.io/"
+          target="_blank"
+          rel="noopener noreferral"
+          aria-label="DesignLed website"
+          >
+          <span class="mb-3 mb-md-0 text-body-secondary"
+            >© 2023 DesignLed Ltd</span>
           </a>
         </div>
 
