--- a/TEMPLATE.html
+++ b/TEMPLATE.html
@@ -142,7 +142,7 @@
             </svg>
           </a>
           <a 
-          class="copyright"
+          class="DesignLed-copyright"
           href="https://designled.io/"
           target="_blank"
           rel="noopener noreferral"
