--- a/contact.html
+++ b/contact.html
@@ -256,7 +256,7 @@
             </svg>
           </a>
           <a 
-          class="copyright"
+          class="DesignLed-copyright"
           href="https://designled.io/"
           target="_blank"
           rel="noopener noreferral"
