Update error from uploading to codeanywhere

--- a/colour-theory.html
+++ b/colour-theory.html
@@ -117,7 +117,7 @@
 
     <!-- TITLE SECTION  -->
 
-    <div class="container-fluid text-center">
+    <div class="container-fluid">
       <h2 class="palette-title">COLOUR THEORY</h2>
     </div>
 
@@ -152,8 +152,8 @@
 
     <!-- Colour sections -->
     <!-- Bootstrap base code  -->
-    <div class="container-fluid colours-section">
-      <div class="colours row row-no-margin">
+    <div class="container-fluid colours-section center-block">
+      <div class="colours row">
         <div class="col-xs-12 col-sm-6">
           <img
             class="thumbnail img-responsive"
@@ -302,6 +302,7 @@
         </div>
       </div>
     </div>
+
 
     <!-- Footer Section -->
 
