Delete center-block element on what is colour page

--- a/colour-theory.html
+++ b/colour-theory.html
@@ -152,7 +152,7 @@
 
     <!-- Colour sections -->
     <!-- Bootstrap base code  -->
-    <div class="container-fluid colours-section center-block">
+    <div class="container-fluid colours-section">
       <div class="colours row">
         <div class="col-xs-12 col-sm-6">
           <img
