Fix mobile formatting bug on colour-theory page

--- a/colour-theory.html
+++ b/colour-theory.html
@@ -116,7 +116,7 @@
     </div>
 
     <!-- TITLE SECTION  -->
-
+<div class="container-fluid">
     <div class="container-fluid">
       <h2 class="palette-title">COLOUR THEORY</h2>
     </div>
@@ -153,7 +153,7 @@
     <!-- Colour sections -->
     <!-- Bootstrap base code  -->
     <div class="container-fluid colours-section">
-      <div class="colours row">
+      <div class="colours row row-no-margin">
         <div class="col-xs-12 col-sm-6">
           <img
             class="thumbnail img-responsive"
@@ -302,7 +302,7 @@
         </div>
       </div>
     </div>
-
+  </div>
 
     <!-- Footer Section -->
 
