--- a/colour-theory.html
+++ b/colour-theory.html
@@ -116,193 +116,196 @@
     </div>
 
     <!-- TITLE SECTION  -->
-<div class="container-fluid">
     <div class="container-fluid">
-      <h2 class="palette-title">COLOUR THEORY</h2>
+      <div class="container-fluid">
+        <h2 class="palette-title">COLOUR THEORY</h2>
+      </div>
+
+      <div>
+        <p class="colour-psych-text">
+          Colour psychology in interior design is well worth paying attention
+          to. It can set the mood for how your guests feel when they come to
+          visit you and how you feel every time you come home. You can literally
+          use different colours to enable you to experience different feelings
+          as you walk into a room. Once you start to understand the power of
+          colour in your home, you can start to use it intentionally to allow
+          you to influence how you feel in different parts of your home.
+          <br /><br />
+          Have you ever walked into a sunny cafe with bright yellow walls and
+          instantly felt livelier? Or entered the calm of a spa decorated in
+          soft, natural tones and felt an unmistakeable feeling of zen? The
+          colour combinations and paint ideas used in your home can affect your
+          mood in exactly the same way. It's important to remember though that
+          whilst there is something of a science behind colours, at the end of
+          the day, how you react to them is subjective. One person's idea of
+          heaven with a black room is another person's idea of hell. So it's
+          important to find the colours that work for you.
+        </p>
+      </div>
+
+      <div class="colour-theory-line">
+        <img
+          src="assets/site-images/Line.webp"
+          alt="rainbow line"
+          style="height: 2px; width: 100%"
+        />
+      </div>
+
+      <!-- Colour sections -->
+      <!-- Bootstrap base code  -->
+      <div class="container-fluid">
+        <div class="colours row row-no-margin colours-section">
+          <div class="col-xs-12 col-sm-6 col-lg-4 offset-lg-2">
+            <img
+              class="thumbnail img-responsive"
+              src="assets/site-images/COLOURS/Yellow.webp"
+              alt="yellow gradient colours"
+            />
+          </div>
+          <div class="description col-xs-12 col-sm-6 col-xl-4">
+            <p>
+              Yellow is the colour of happiness, optimism and creativity. This
+              is why it's such a great colour for children's spaces. Kids'
+              bedrooms, playrooms - people instinctively use it in these rooms
+              without understanding why. It is a colour that brings a smile to
+              people's face when they walk into a yellow room. It comes in so
+              many shades that from buttercup to mustard, there's a shade to
+              suit every style of home from a modern apartment to a period
+              house.
+            </p>
+          </div>
+        </div>
+
+        <div class="colours row row-no-margin">
+          <div class="col-xs-12 col-sm-6 col-xl-4 offset-xl-2">
+            <img
+              class="thumbnail img-responsive"
+              src="assets/site-images/COLOURS/Orange.webp"
+              alt="orange gradient colours"
+            />
+          </div>
+          <div class="description col-xs-12 col-sm-6 col-xl-4">
+            <p>
+              Orange is an undeniably confident and positive colour that shows a
+              bold personality. Remember that this colour has so many different
+              permutations, it doesn't have to be the bright, traffic light
+              orange. If you like this colour but are a bit wary, look at
+              something with touches of peach or leaning more towards pastel
+              shades. If you love that really bold orange, remember colour
+              doesn't just go on walls. Anything from a lovely orange velvet
+              sofa to a small pop with a cushion can bring this beautiful,
+              positive colour into your home.
+            </p>
+          </div>
+        </div>
+
+        <div class="colours row row-no-margin">
+          <div class="col-xs-12 col-sm-6 col-xl-4 offset-xl-2">
+            <img
+              class="thumbnail img-responsive"
+              src="assets/site-images/COLOURS/Red.webp"
+              alt="red gradient colours"
+            />
+          </div>
+          <div class="description col-xs-12 col-sm-6 col-xl-4">
+            <p>
+              Red is a energizing, strong colour that evokes a strong reaction.
+              It's conducive to socialising and strong personalities. That's why
+              you often had one of the socialising rooms in grand old houses
+              painted a strong red. Whilst you don't often see rooms painted
+              entirely in red in more modern times, it can be a fantastic accent
+              colour to make a statement. Some of the darker reds can be a
+              gorgeous, daring choice for kitchen units.
+            </p>
+          </div>
+        </div>
+
+        <div class="colours row row-no-margin">
+          <div class="col-xs-12 col-sm-6 col-xl-4 offset-xl-2">
+            <img
+              class="thumbnail img-responsive"
+              src="assets/site-images/COLOURS/Pink.webp"
+              alt="pink gradient colours"
+            />
+          </div>
+
+          <div class="description col-xs-12 col-sm-6 col-xl-4">
+            <p>
+              Pink is no longer the domain of little girl's bedrooms. It's at
+              once inviting, fun and grown up - if the right hue is used. The
+              softer, earthier shades are fantastic to use in a bedrooom as its'
+              softness lends itself to create a soothing feel. However, the
+              stronger tones can work fantastically for show-stopping accent
+              pieces. A staircase painted in a dark, moody pink in an otherwise
+              neutral hallway makes a fantastic statement.
+            </p>
+          </div>
+        </div>
+
+        <div class="colours row row-no-margin">
+          <div class="col-xs-12 col-sm-6 col-xl-4 offset-xl-2">
+            <img
+              class="thumbnail img-responsive"
+              src="assets/site-images/COLOURS/Purple.webp"
+              alt="purple gradient colours"
+            />
+          </div>
+          <div class="description col-xs-12 col-sm-6 col-xl-4">
+            <p>
+              Purple is often associated with luxury and elegance through its
+              association with royalty. Indeed the darker variants of this
+              colour can create an imposing presence when used on a wall.
+              However the ligher shades, like lavender, can have a wonderfully
+              calming effect. These tones are great used in bedrooms where the
+              aim is to soothe. This is also why you often see them used in
+              places people go to be calm such a meditation practices.
+            </p>
+          </div>
+        </div>
+
+        <div class="colours row row-no-margin">
+          <div class="col-xs-12 col-sm-6 col-xl-4 offset-xl-2">
+            <img
+              class="thumbnail img-responsive"
+              src="assets/site-images/COLOURS/Blue.webp"
+              alt="blue gradient colours"
+            />
+          </div>
+          <div class="description col-xs-12 col-sm-6 col-xl-4">
+            <p>
+              Blue is one of the most versatile colours on the colour wheel. It
+              can be used from everywhere from the bedroom to the living room to
+              the kitchen. An incredibly peaceful colour, it's great for
+              monochromatic schemes where you are pairing different shades of
+              the same colour together in the same space. The dark navy that has
+              been so popular in kitchens in recent times gives a room an edge
+              whilst still allowing it to feel grounded.
+            </p>
+          </div>
+        </div>
+
+        <div class="colours row row-no-margin">
+          <div class="col-xs-12 col-sm-6 col-xl-4 offset-xl-2">
+            <img
+              class="thumbnail img-responsive"
+              src="assets/site-images/COLOURS/Green.webp"
+              alt="green gradient colours"
+            />
+          </div>
+          <div class="description col-xs-12 col-sm-6 col-xl-4">
+            <p>
+              As everyone konws, green is the colour of nature. It is an
+              innately peaceful colour in its purest form when close to forest
+              colours. It is seen as a colour that promotes good luck and
+              health. Like blue, it is a very versatile colour that comes in so
+              many shades it can be used just about everywhere in the home.
+              Wherever it is used, it creates a sense of peacefulness that is
+              unequaled in any other colour.
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
-
-    <div>
-      <p class="colour-psych-text">
-        Colour psychology in interior design is well worth paying attention to.
-        It can set the mood for how your guests feel when they come to visit you
-        and how you feel every time you come home. You can literally use
-        different colours to enable you to experience different feelings as you
-        walk into a room. Once you start to understand the power of colour in
-        your home, you can start to use it intentionally to allow you to
-        influence how you feel in different parts of your home. <br /><br />
-        Have you ever walked into a sunny cafe with bright yellow walls and
-        instantly felt livelier? Or entered the calm of a spa decorated in
-        soft, natural tones and felt an unmistakeable feeling of zen? The colour
-        combinations and paint ideas used in your home can affect your mood in
-        exactly the same way. It's important to remember though that whilst
-        there is something of a science behind colours, at the end of the day,
-        how you react to them is subjective. One person's idea of heaven with a
-        black room is another person's idea of hell. So it's important to find
-        the colours that work for you.
-      </p>
-    </div>
-
-    <div class="colour-theory-line">
-      <img
-        src="assets/site-images/Line.webp"
-        alt="rainbow line"
-        style="height: 2px; width: 100%"
-      />
-    </div>
-
-    <!-- Colour sections -->
-    <!-- Bootstrap base code  -->
-    <div class="container-fluid colours-section">
-      <div class="colours row row-no-margin">
-        <div class="col-xs-12 col-sm-6">
-          <img
-            class="thumbnail img-responsive"
-            src="assets/site-images/COLOURS/Yellow.webp"
-            alt="yellow gradient colours"
-          />
-        </div>
-        <div class="description col-xs-12 col-sm-6">
-          <p>
-            Yellow is the colour of happiness, optimism and creativity. This is
-            why it's such a great colour for children's spaces. Kids' bedrooms,
-            playrooms - people instinctively use it in these rooms without
-            understanding why. It is a colour that brings a smile to people's
-            face when they walk into a yellow room. It comes in so many shades
-            that from buttercup to mustard, there's a shade to suit every style
-            of home from a modern apartment to a period house.
-          </p>
-        </div>
-      </div>
-
-      <div class="colours row row-no-margin">
-        <div class="col-xs-12 col-sm-6">
-          <img
-            class="thumbnail img-responsive"
-            src="assets/site-images/COLOURS/Orange.webp"
-            alt="orange gradient colours"
-          />
-        </div>
-        <div class="description col-xs-12 col-sm-6">
-          <p>
-            Orange is an undeniably confident and positive colour that shows a
-            bold personality. Remember that this colour has so many different
-            permutations, it doesn't have to be the bright, traffic light orange.
-            If you like this colour but are a bit wary, look at something with
-            touches of peach or leaning more towards pastel shades. If you love
-            that really bold orange, remember colour doesn't just go on walls.
-            Anything from a lovely orange velvet sofa to a small pop with a
-            cushion can bring this beautiful, positive colour into your home.
-          </p>
-        </div>
-      </div>
-
-      <div class="colours row row-no-margin">
-        <div class="col-xs-12 col-sm-6">
-          <img
-            class="thumbnail img-responsive"
-            src="assets/site-images/COLOURS/Red.webp"
-            alt="red gradient colours"
-          />
-        </div>
-        <div class="description col-xs-12 col-sm-6">
-          <p>
-            Red is a energizing, strong colour that evokes a strong reaction.
-            It's conducive to socialising and strong personalities. That's why
-            you often had one of the socialising rooms in grand old houses
-            painted a strong red. Whilst you don't often see rooms painted
-            entirely in red in more modern times, it can be a fantastic accent
-            colour to make a statement. Some of the darker reds can be a
-            gorgeous, daring choice for kitchen units.
-          </p>
-        </div>
-      </div>
-
-      <div class="colours row row-no-margin">
-        <div class="col-xs-12 col-sm-6">
-          <img
-            class="thumbnail img-responsive"
-            src="assets/site-images/COLOURS/Pink.webp"
-            alt="pink gradient colours"
-          />
-        </div>
-
-        <div class="description col-xs-12 col-sm-6">
-          <p>
-            Pink is no longer the domain of little girl's bedrooms. It's at once
-            inviting, fun and grown up - if the right hue is used. The softer,
-            earthier shades are fantastic to use in a bedrooom as its' softness
-            lends itself to create a soothing feel. However, the stronger tones
-            can work fantastically for show-stopping accent pieces. A staircase
-            painted in a dark, moody pink in an otherwise neutral hallway makes
-            a fantastic statement.
-          </p>
-        </div>
-      </div>
-
-      <div class="colours row row-no-margin">
-        <div class="col-xs-12 col-sm-6">
-          <img
-            class="thumbnail img-responsive"
-            src="assets/site-images/COLOURS/Purple.webp"
-            alt="purple gradient colours"
-          />
-        </div>
-        <div class="description col-xs-12 col-sm-6">
-          <p>
-            Purple is often associated with luxury and elegance through its
-            association with royalty. Indeed the darker variants of this colour
-            can create an imposing presence when used on a wall. However the
-            ligher shades, like lavender, can have a wonderfully calming effect.
-            These tones are great used in bedrooms where the aim is to soothe.
-            This is also why you often see them used in places people go to be
-            calm such a meditation practices.
-          </p>
-        </div>
-      </div>
-
-      <div class="colours row row-no-margin">
-        <div class="col-xs-12 col-sm-6">
-          <img
-            class="thumbnail img-responsive"
-            src="assets/site-images/COLOURS/Blue.webp"
-            alt="blue gradient colours"
-          />
-        </div>
-        <div class="description col-xs-12 col-sm-6">
-          <p>
-            Blue is one of the most versatile colours on the colour wheel. It
-            can be used from everywhere from the bedroom to the living room to
-            the kitchen. An incredibly peaceful colour, it's great for
-            monochromatic schemes where you are pairing different shades of the
-            same colour together in the same space. The dark navy that has been
-            so popular in kitchens in recent times gives a room an edge whilst
-            still allowing it to feel grounded.
-          </p>
-        </div>
-      </div>
-
-      <div class="colours row row-no-margin">
-        <div class="col-xs-12 col-sm-6">
-          <img
-            class="thumbnail img-responsive"
-            src="assets/site-images/COLOURS/Green.webp"
-            alt="green gradient colours"
-          />
-        </div>
-        <div class="description col-xs-12 col-sm-6">
-          <p>
-            As everyone konws, green is the colour of nature. It is an innately
-            peaceful colour in its purest form when close to forest colours. It
-            is seen as a colour that promotes good luck and health. Like blue,
-            it is a very versatile colour that comes in so many shades it can be
-            used just about everywhere in the home. Wherever it is used, it
-            creates a sense of peacefulness that is unequaled in any other
-            colour.
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
 
     <!-- Footer Section -->
 
@@ -318,21 +321,19 @@
         class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
       >
         <div class="col-md-4 d-flex align-items-center">
-            <svg class="bi" width="30" height="24">
-              <use
-                xlink:href="#bootstrap"
-                aria-label="DesignLed copyright"
-              ></use>
-            </svg>
-          <a 
-          class="DesignLed-copyright"
-          href="https://designled.io/"
-          target="_blank"
-          rel="noopener noreferral"
-          aria-label="DesignLed website"
+          <svg class="bi" width="30" height="24">
+            <use xlink:href="#bootstrap" aria-label="DesignLed copyright"></use>
+          </svg>
+          <a
+            class="designLed-copyright"
+            href="https://designled.io/"
+            target="_blank"
+            rel="noopener noreferral"
+            aria-label="DesignLed website"
           >
-          <span class="mb-3 mb-md-0 text-body-secondary"
-            >© 2023 DesignLed Ltd</span>
+            <span class="mb-3 mb-md-0 text-body-secondary"
+              >© 2023 DesignLed Ltd</span
+            >
           </a>
         </div>
 
