--- a/TEMPLATE.html
+++ b/TEMPLATE.html
@@ -129,8 +129,8 @@
       <footer
         class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
       >
-        <div class="col-md-4 col-xs-2 offset-xs-6 align-items-center">
-            <svg class="bi" width="30" height="20">
+        <div class="col-md-4 align-items-center">
+            <svg class="bi social-icons-row" width="30" height="20">
               <use
                 xlink:href="#bootstrap"
                 aria-label="designLed copyright"
