--- a/colour-theory.html
+++ b/colour-theory.html
@@ -320,24 +320,27 @@
       <footer
         class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
       >
-        <div class="col-md-4 d-flex align-items-center">
-          <svg class="bi" width="30" height="24">
-            <use xlink:href="#bootstrap" aria-label="DesignLed copyright"></use>
-          </svg>
-          <a
-            class="designLed-copyright"
-            href="https://designled.io/"
-            target="_blank"
-            rel="noopener noreferral"
-            aria-label="DesignLed website"
+        <div class="col-md-4 align-items-center">
+            <svg class="bi social-icons-row" width="30" height="20">
+              <use
+                xlink:href="#bootstrap"
+                aria-label="designLed copyright"
+              ></use>
+            </svg>
+          <a 
+          class="designLed-copyright"
+          href="https://designled.io/"
+          target="_blank"
+          rel="noopener noreferral"
+          aria-label="DesignLed website"
           >
-            <span class="mb-3 mb-md-0 text-body-secondary"
-              >© 2023 DesignLed Ltd</span
-            >
+          <span class="mb-3 mb-md-0 text-body-secondary"
+            >© 2023 DesignLed Ltd</span>
           </a>
         </div>
 
-        <div class="nav col-md-2 justify-content-between">
+        <div class="nav col-md-3
+         justify-content-between">
           <a
             href="https://www.pinterest.ie/designledstudio"
             target="_blank"
