--- a/contact.html
+++ b/contact.html
@@ -243,15 +243,15 @@
       <footer
         class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
       >
-        <div class="col-md-4 d-flex align-items-center">
-            <svg class="bi" width="30" height="24">
+        <div class="col-md-4 align-items-center">
+            <svg class="bi social-icons-row" width="30" height="20">
               <use
                 xlink:href="#bootstrap"
-                aria-label="DesignLed copyright"
+                aria-label="designLed copyright"
               ></use>
             </svg>
           <a 
-          class="DesignLed-copyright"
+          class="designLed-copyright"
           href="https://designled.io/"
           target="_blank"
           rel="noopener noreferral"
@@ -262,7 +262,8 @@
           </a>
         </div>
 
-        <div class="nav col-md-2 justify-content-between">
+        <div class="nav col-md-3
+         justify-content-between">
           <a
             href="https://www.pinterest.ie/designledstudio"
             target="_blank"
