Change spacing and font sizes for mobile view

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <!-- Bootstrap base code  -->
     <div class="container-fluid coming-soon">
       <div class="row row-no-margin">
-        <div class="col-xs-12 col-sm-4 col-no-padding">
+        <div class="col-xs-12 col-sm-4 col-no-padding pb-3">
           <i
             class="fa-solid fa-house fa-6x"
             style="color: #ffffff"
