Centralise content on Palettes pages for larger screens

--- a/Neutral.html
+++ b/Neutral.html
@@ -134,14 +134,14 @@
 
     <!-- Bootstrap base code  -->
     <div class="hero-images row row-no-margin">
-      <div class="col-xs-12 col-sm-6 col-no-padding">
+      <div class="col-xs-12 col-sm-6 col-xl-4 offset-xl-2">
         <img
           class="thumbnail img-responsive"
           src="assets/site-images/PALETTES/neutral_room.webp"
           alt="Neutral Room"
         />
       </div>
-      <div class="col-xs-12 col-sm-6 col-no-padding">
+      <div class="col-xs-12 col-sm-6 col-xl-2">
         <img
           class="thumbnail img-responsive"
           src="assets/site-images/PALETTES/neutral_palette.webp"
