--- a/colour-theory.html
+++ b/colour-theory.html
@@ -154,8 +154,8 @@
       <!-- Colour sections -->
       <!-- Bootstrap base code  -->
       <div class="container-fluid">
-        <div class="colours row row-no-margin colours-section">
-          <div class="col-xs-12 col-sm-6 col-lg-4 offset-lg-2">
+        <div class="colours row row-no-margin">
+          <div class="col-xs-12 col-sm-6 col-xl-4 offset-xl-2">
             <img
               class="thumbnail img-responsive"
               src="assets/site-images/COLOURS/Yellow.webp"
@@ -187,13 +187,12 @@
           <div class="description col-xs-12 col-sm-6 col-xl-4">
             <p>
               Orange is an undeniably confident and positive colour that shows a
-              bold personality. Remember that this colour has so many different
-              permutations, it doesn't have to be the bright, traffic light
+              bold personality. This colour has so many different
+              shades, it doesn't have to be the bright, traffic light
               orange. If you like this colour but are a bit wary, look at
               something with touches of peach or leaning more towards pastel
               shades. If you love that really bold orange, remember colour
-              doesn't just go on walls. Anything from a lovely orange velvet
-              sofa to a small pop with a cushion can bring this beautiful,
+              doesn't just go on walls, a small pop with a cushion can bring this
               positive colour into your home.
             </p>
           </div>
