Enlarge paragraph font size and put h1 for main headings on all pages

--- a/contact.html
+++ b/contact.html
@@ -117,11 +117,11 @@
 
     <section class="mb-4">
       <!-- Header Text -->
-      <h2 class="h1-responsive font-weight-bold text-center my-4">
+      <h1 class="h1-responsive font-weight-bold text-center my-4">
         Contact us
-      </h2>
+      </h21>
 
-      <p class="text-center w-responsive mx-auto mb-5">
+      <p class="text-center">
         We are a team of colour experts! If you have any questions regarding
         using colour in your home, please drop us a line!
       </p>
