--- a/Contact-form-submit.html
+++ b/Contact-form-submit.html
@@ -25,9 +25,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Grandiflora+One&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poiret+One&family=Shadows+Into+Light&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="assets/CSS/styles.css" />
 
     <meta
