--- a/colour-theory.html
+++ b/colour-theory.html
@@ -25,9 +25,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Grandiflora+One&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poiret+One&family=Shadows+Into+Light&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="assets/CSS/styles.css" />
 
     <title>Colour Theory</title>
@@ -187,13 +188,13 @@
           <div class="description col-xs-12 col-sm-6 col-xl-4">
             <p>
               Orange is an undeniably confident and positive colour that shows a
-              bold personality. This colour has so many different
-              shades, it doesn't have to be the bright, traffic light
-              orange. If you like this colour but are a bit wary, look at
-              something with touches of peach or leaning more towards pastel
-              shades. If you love that really bold orange, remember colour
-              doesn't just go on walls, a small pop with a cushion can bring this
-              positive colour into your home.
+              bold personality. This colour has so many different shades, it
+              doesn't have to be the bright, traffic light orange. If you like
+              this colour but are a bit wary, look at something with touches of
+              peach or leaning more towards pastel shades. If you love that
+              really bold orange, remember colour doesn't just go on walls, a
+              small pop with a cushion can bring this positive colour into your
+              home.
             </p>
           </div>
         </div>
@@ -320,26 +321,23 @@
         class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
       >
         <div class="col-md-4 align-items-center">
-            <svg class="bi social-icons-row" width="30" height="20">
-              <use
-                xlink:href="#bootstrap"
-                aria-label="designLed copyright"
-              ></use>
-            </svg>
-          <a 
-          class="designLed-copyright"
-          href="https://designled.io/"
-          target="_blank"
-          rel="noopener noreferral"
-          aria-label="DesignLed website"
+          <svg class="bi social-icons-row" width="30" height="20">
+            <use xlink:href="#bootstrap" aria-label="designLed copyright"></use>
+          </svg>
+          <a
+            class="designLed-copyright"
+            href="https://designled.io/"
+            target="_blank"
+            rel="noopener noreferral"
+            aria-label="DesignLed website"
           >
-          <span class="mb-3 mb-md-0 text-body-secondary"
-            >© 2023 DesignLed Ltd</span>
+            <span class="mb-3 mb-md-0 text-body-secondary"
+              >© 2023 DesignLed Ltd</span
+            >
           </a>
         </div>
 
-        <div class="nav col-md-3
-         justify-content-between">
+        <div class="nav col-md-3 justify-content-between">
           <a
             href="https://www.pinterest.ie/designledstudio"
             target="_blank"
