Make Footer Sticky * Update code on all pages to make footer sticky *Update readme to reflect where I found this code.

--- a/TEMPLATE.html
+++ b/TEMPLATE.html
@@ -39,7 +39,7 @@
     />
   </head>
 
-  <body>
+  <body class="wrapper">
     <!-- Navbar base code from Bootstrap -->
 
     <!-- Nav bar section-->
@@ -119,7 +119,7 @@
 
     <!-- Footer Section -->
 
-    <div class="container-fluid">
+    <div class="container-fluid footer">
       <img
         src="assets/site-images/Line.webp"
         alt="rainbow line"
