--- a/404.html
+++ b/404.html
@@ -39,7 +39,7 @@
     />
   </head>
 
-  <body>
+  <body class="wrapper">
     <!-- Navbar base code from Bootstrap -->
 
     <!-- Nav bar section-->
@@ -129,78 +129,75 @@
       </div>
     </div>
 
-   <!-- Footer Section -->
+    <!-- Footer Section -->
 
-   <div class="container-fluid">
-    <img
-      src="assets/site-images/Line.webp"
-      alt="rainbow line"
-      style="width: 100%; height: 2px"
-    />
+    <div class="container-fluid">
+      <img
+        src="assets/site-images/Line.webp"
+        alt="rainbow line"
+        style="width: 100%; height: 2px"
+      />
 
-    <!-- Footer base code from Bootstrap -->
-    <footer
-      class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
-    >
-      <div class="col-md-4 align-items-center">
+      <!-- Footer base code from Bootstrap -->
+      <footer
+        class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
+      >
+        <div class="col-md-4 align-items-center">
           <svg class="bi social-icons-row" width="30" height="20">
-            <use
-              xlink:href="#bootstrap"
-              aria-label="designLed copyright"
-            ></use>
+            <use xlink:href="#bootstrap" aria-label="designLed copyright"></use>
           </svg>
-        <a 
-        class="designLed-copyright"
-        href="https://designled.io/"
-        target="_blank"
-        rel="noopener noreferral"
-        aria-label="DesignLed website"
-        >
-        <span class="mb-3 mb-md-0 text-body-secondary"
-          >© 2023 DesignLed Ltd</span>
-        </a>
-      </div>
+          <a
+            class="designLed-copyright"
+            href="https://designled.io/"
+            target="_blank"
+            rel="noopener noreferral"
+            aria-label="DesignLed website"
+          >
+            <span class="mb-3 mb-md-0 text-body-secondary"
+              >© 2023 DesignLed Ltd</span
+            >
+          </a>
+        </div>
 
-      <div class="nav col-md-3
-       justify-content-between">
-        <a
-          href="https://www.pinterest.ie/designledstudio"
-          target="_blank"
-          rel="noopener noreferral"
-          aria-label="Pinterest"
-          ><i
-            class="social-icons fa-brands fa-pinterest fa-2x"
-            aria-hidden="true"
-          ></i
-        ></a>
-        <a
-          href="https://www.facebook.com/designled"
-          target="_blank"
-          rel="noopener noreferral"
-          aria-label="Facebook"
-          ><i
-            class="social-icons fa-brands fa-facebook-f fa-2x"
-            aria-hidden="true"
-          ></i
-        ></a>
-        <a
-          href="https://www.instagram.com/designledstudio/"
-          target="_blank"
-          rel="noopener noreferral"
-          aria-label="Instagram"
-          ><i
-            class="social-icons fa-brands fa-instagram fa-2x"
-            aria-hidden="true"
-          ></i
-        ></a>
-        <a href="mailto:hello@designled.io" aria-label="email"
-          ><i
-            class="social-icons fa-solid fa-envelope fa-2x"
-            aria-hidden="true"
-          ></i
-        ></a>
-      </div>
-    </footer>
-  </div>
-</body>
+        <div class="nav col-md-3 justify-content-between">
+          <a
+            href="https://www.pinterest.ie/designledstudio"
+            target="_blank"
+            rel="noopener noreferral"
+            aria-label="Pinterest"
+            ><i
+              class="social-icons fa-brands fa-pinterest fa-2x"
+              aria-hidden="true"
+            ></i
+          ></a>
+          <a
+            href="https://www.facebook.com/designled"
+            target="_blank"
+            rel="noopener noreferral"
+            aria-label="Facebook"
+            ><i
+              class="social-icons fa-brands fa-facebook-f fa-2x"
+              aria-hidden="true"
+            ></i
+          ></a>
+          <a
+            href="https://www.instagram.com/designledstudio/"
+            target="_blank"
+            rel="noopener noreferral"
+            aria-label="Instagram"
+            ><i
+              class="social-icons fa-brands fa-instagram fa-2x"
+              aria-hidden="true"
+            ></i
+          ></a>
+          <a href="mailto:hello@designled.io" aria-label="email"
+            ><i
+              class="social-icons fa-solid fa-envelope fa-2x"
+              aria-hidden="true"
+            ></i
+          ></a>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
