--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     />
   </head>
 
-  <body>
+  <body class="wrapper">
     <!-- Navbar base code from Bootstrap -->
 
     <!-- Nav bar section-->
