Align expanded hamburger in mobile view correctly

--- a/TEMPLATE.html
+++ b/TEMPLATE.html
@@ -75,7 +75,7 @@
           </li>
           <li class="nav-item">
             <a href="colour-theory.html" class="nav-link m-2 menu-item"
-              >What is Colour Theory?</a
+              >Colour Theory</a
             >
           </li>
 
