Fix spacing on Colour Theory page on mobile view

--- a/colour-theory.html
+++ b/colour-theory.html
@@ -291,7 +291,7 @@
           </div>
           <div class="description col-xs-12 col-sm-6 col-xl-4">
             <p>
-              As everyone konws, green is the colour of nature. It is an
+              As everyone knows, green is the colour of nature. It is an
               innately peaceful colour in its purest form when close to forest
               colours. It is seen as a colour that promotes good luck and
               health. Like blue, it is a very versatile colour that comes in so
