--- a/Contact-form-submit.html
+++ b/Contact-form-submit.html
@@ -74,7 +74,7 @@
           class="menu collapse navbar-collapse flex-grow-1 text-right"
           id="myNavbar"
         >
-          <ul class="navbar-nav ml-auto flex-nowrap flex-row">
+          <ul class="navbar-nav ml-auto flex-wrap flex-row">
             <li class="nav-item">
               <a href="index.html" class="nav-link m-2 menu-item">Home</a>
             </li>
